--- a/std-errors.html
+++ b/std-errors.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Florian Oswald and Jean-Marc Robin">
 
 
-<meta name="date" content="2018-08-16">
+<meta name="date" content="2018-08-18">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -119,19 +119,61 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="./">ScPo 2nd Year Econometrics</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Introduction</a></li>
-<li class="chapter" data-level="1" data-path="R-intro.html"><a href="R-intro.html"><i class="fa fa-check"></i><b>1</b> Introduction to <code>R</code></a></li>
-<li class="chapter" data-level="2" data-path="sum.html"><a href="sum.html"><i class="fa fa-check"></i><b>2</b> Working With Data</a></li>
-<li class="chapter" data-level="3" data-path="linreg.html"><a href="linreg.html"><i class="fa fa-check"></i><b>3</b> Linear Regression</a></li>
-<li class="chapter" data-level="4" data-path="std-errors.html"><a href="std-errors.html"><i class="fa fa-check"></i><b>4</b> Standard Errors</a></li>
-<li class="chapter" data-level="5" data-path="multiple-reg.html"><a href="multiple-reg.html"><i class="fa fa-check"></i><b>5</b> Multiple Regression</a></li>
-<li class="chapter" data-level="6" data-path="categorical-vars.html"><a href="categorical-vars.html"><i class="fa fa-check"></i><b>6</b> Categorial Variables</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Syllabus</a></li>
+<li class="chapter" data-level="1" data-path="R-intro.html"><a href="R-intro.html"><i class="fa fa-check"></i><b>1</b> Introduction to <code>R</code></a><ul>
+<li class="chapter" data-level="1.1" data-path="R-intro.html"><a href="R-intro.html#getting-started"><i class="fa fa-check"></i><b>1.1</b> Getting Started</a></li>
+<li class="chapter" data-level="1.2" data-path="R-intro.html"><a href="R-intro.html#basic-calculations"><i class="fa fa-check"></i><b>1.2</b> Basic Calculations</a></li>
+<li class="chapter" data-level="1.3" data-path="R-intro.html"><a href="R-intro.html#getting-help"><i class="fa fa-check"></i><b>1.3</b> Getting Help</a></li>
+<li class="chapter" data-level="1.4" data-path="R-intro.html"><a href="R-intro.html#installing-packages"><i class="fa fa-check"></i><b>1.4</b> Installing Packages</a></li>
+<li class="chapter" data-level="1.5" data-path="R-intro.html"><a href="R-intro.html#data-types"><i class="fa fa-check"></i><b>1.5</b> Data Types</a></li>
+<li class="chapter" data-level="1.6" data-path="R-intro.html"><a href="R-intro.html#data-structures"><i class="fa fa-check"></i><b>1.6</b> Data Structures</a></li>
+<li class="chapter" data-level="1.7" data-path="R-intro.html"><a href="R-intro.html#programming-basics"><i class="fa fa-check"></i><b>1.7</b> Programming Basics</a></li>
+</ul></li>
+<li class="chapter" data-level="2" data-path="sum.html"><a href="sum.html"><i class="fa fa-check"></i><b>2</b> Working With Data</a><ul>
+<li class="chapter" data-level="2.1" data-path="sum.html"><a href="sum.html#summary-statistics"><i class="fa fa-check"></i><b>2.1</b> Summary Statistics</a></li>
+<li class="chapter" data-level="2.2" data-path="sum.html"><a href="sum.html#plotting"><i class="fa fa-check"></i><b>2.2</b> Plotting</a></li>
+<li class="chapter" data-level="2.3" data-path="sum.html"><a href="sum.html#summarize-two"><i class="fa fa-check"></i><b>2.3</b> Summarizing Two Variables</a></li>
+<li class="chapter" data-level="2.4" data-path="sum.html"><a href="sum.html#the-tidyverse"><i class="fa fa-check"></i><b>2.4</b> The <code>tidyverse</code></a></li>
+</ul></li>
+<li class="chapter" data-level="3" data-path="linreg.html"><a href="linreg.html"><i class="fa fa-check"></i><b>3</b> Linear Regression</a><ul>
+<li class="chapter" data-level="3.1" data-path="linreg.html"><a href="linreg.html#data-on-cars"><i class="fa fa-check"></i><b>3.1</b> Data on Cars</a></li>
+<li class="chapter" data-level="3.2" data-path="linreg.html"><a href="linreg.html#dgp-and-models"><i class="fa fa-check"></i><b>3.2</b> DGP and Models</a></li>
+<li class="chapter" data-level="3.3" data-path="linreg.html"><a href="linreg.html#lm-example1"><i class="fa fa-check"></i><b>3.3</b> An Example: California Student Test Scores</a></li>
+<li class="chapter" data-level="3.4" data-path="linreg.html"><a href="linreg.html#the-lm-function"><i class="fa fa-check"></i><b>3.4</b> The <code>lm()</code> function</a></li>
+</ul></li>
+<li class="chapter" data-level="4" data-path="std-errors.html"><a href="std-errors.html"><i class="fa fa-check"></i><b>4</b> Standard Errors</a><ul>
+<li class="chapter" data-level="4.1" data-path="std-errors.html"><a href="std-errors.html#what-is-true"><i class="fa fa-check"></i><b>4.1</b> What is <em>true</em>?</a></li>
+<li class="chapter" data-level="4.2" data-path="std-errors.html"><a href="std-errors.html#experiencing-standard-errors"><i class="fa fa-check"></i><b>4.2</b> Experiencing Standard Errors</a></li>
+<li class="chapter" data-level="4.3" data-path="std-errors.html"><a href="std-errors.html#standard-errors-in-theory"><i class="fa fa-check"></i><b>4.3</b> Standard Errors in Theory</a></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="multiple-reg.html"><a href="multiple-reg.html"><i class="fa fa-check"></i><b>5</b> Multiple Regression</a><ul>
+<li class="chapter" data-level="5.1" data-path="multiple-reg.html"><a href="multiple-reg.html#california-test-scores-2"><i class="fa fa-check"></i><b>5.1</b> California Test Scores 2</a></li>
+<li class="chapter" data-level="5.2" data-path="multiple-reg.html"><a href="multiple-reg.html#mreg-interactions"><i class="fa fa-check"></i><b>5.2</b> Interactions</a></li>
+</ul></li>
+<li class="chapter" data-level="6" data-path="categorical-vars.html"><a href="categorical-vars.html"><i class="fa fa-check"></i><b>6</b> Categorial Variables</a><ul>
+<li class="chapter" data-level="6.1" data-path="categorical-vars.html"><a href="categorical-vars.html#categorical-variables-in-r-factor"><i class="fa fa-check"></i><b>6.1</b> Categorical Variables in <code>R</code>: <code>factor</code></a></li>
+<li class="chapter" data-level="6.2" data-path="categorical-vars.html"><a href="categorical-vars.html#saturated-models-main-effects-and-interactions"><i class="fa fa-check"></i><b>6.2</b> Saturated Models: Main Effects and Interactions</a></li>
+</ul></li>
 <li class="chapter" data-level="7" data-path="quantreg.html"><a href="quantreg.html"><i class="fa fa-check"></i><b>7</b> Quantile Regression</a></li>
-<li class="chapter" data-level="8" data-path="panel-data.html"><a href="panel-data.html"><i class="fa fa-check"></i><b>8</b> Panel Data</a></li>
-<li class="chapter" data-level="9" data-path="IV.html"><a href="IV.html"><i class="fa fa-check"></i><b>9</b> Instrumental Variables</a></li>
+<li class="chapter" data-level="8" data-path="panel-data.html"><a href="panel-data.html"><i class="fa fa-check"></i><b>8</b> Panel Data</a><ul>
+<li class="chapter" data-level="8.1" data-path="panel-data.html"><a href="panel-data.html#fixed-effects"><i class="fa fa-check"></i><b>8.1</b> fixed effects</a></li>
+<li class="chapter" data-level="8.2" data-path="panel-data.html"><a href="panel-data.html#did"><i class="fa fa-check"></i><b>8.2</b> DiD</a></li>
+<li class="chapter" data-level="8.3" data-path="panel-data.html"><a href="panel-data.html#rdd"><i class="fa fa-check"></i><b>8.3</b> RDD</a></li>
+<li class="chapter" data-level="8.4" data-path="panel-data.html"><a href="panel-data.html#example"><i class="fa fa-check"></i><b>8.4</b> Example</a></li>
+</ul></li>
+<li class="chapter" data-level="9" data-path="IV.html"><a href="IV.html"><i class="fa fa-check"></i><b>9</b> Instrumental Variables</a><ul>
+<li class="chapter" data-level="9.1" data-path="IV.html"><a href="IV.html#simultaneity-bias"><i class="fa fa-check"></i><b>9.1</b> Simultaneity Bias</a></li>
+</ul></li>
 <li class="chapter" data-level="10" data-path="logit-probit.html"><a href="logit-probit.html"><i class="fa fa-check"></i><b>10</b> Logit and Probit</a></li>
 <li class="chapter" data-level="11" data-path="pca.html"><a href="pca.html"><i class="fa fa-check"></i><b>11</b> Principal Component Analysis</a></li>
-<li class="chapter" data-level="12" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>12</b> Notes</a></li>
+<li class="chapter" data-level="12" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>12</b> Notes</a><ul>
+<li class="chapter" data-level="12.1" data-path="notes.html"><a href="notes.html#book-usage"><i class="fa fa-check"></i><b>12.1</b> Book usage</a></li>
+</ul></li>
+<li class="chapter" data-level="13" data-path="R-advanced.html"><a href="R-advanced.html"><i class="fa fa-check"></i><b>13</b> Advanced <code>R</code></a><ul>
+<li class="chapter" data-level="13.1" data-path="R-advanced.html"><a href="R-advanced.html#more-vectorization"><i class="fa fa-check"></i><b>13.1</b> More Vectorization</a></li>
+<li class="chapter" data-level="13.2" data-path="R-advanced.html"><a href="R-advanced.html#calculations-with-vectors-and-matrices"><i class="fa fa-check"></i><b>13.2</b> Calculations with Vectors and Matrices</a></li>
+<li class="chapter" data-level="13.3" data-path="R-advanced.html"><a href="R-advanced.html#matrices-1"><i class="fa fa-check"></i><b>13.3</b> Matrices</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -162,7 +204,7 @@ How <em>confident</em> should we be about the estimated values <span class="math
 </center>
 </div>
 <p><br> Let’s remind ourselves of the example at the end of the previous chapter, and that we introduced the term <em>confidence interval</em>, shown here as the shaded area:</p>
-<p><img src="ScPoEconometrics_files/figure-html/unnamed-chunk-138-1.png" width="672" style="display: block; margin: auto;" /></p>
+<p><img src="ScPoEconometrics_files/figure-html/unnamed-chunk-114-1.png" width="672" style="display: block; margin: auto;" /></p>
 <p>The shaded area shows us the region within which the <strong>true</strong> red line will lie with 95% probability. The fact that there is unknown true line (i.e. a <em>true</em> slope coefficient <span class="math inline">\(\beta_1\)</span>) that we wish to uncover from a sample of data should remind you immediately of our first tutorial. There we wanted to estimate the true population mean from a sample of data, and we saw that as the sample size <span class="math inline">\(N\)</span> increased, our estimate got better and better - fundamentally this is the same idea here.</p>
 <div id="what-is-true" class="section level2">
 <h2><span class="header-section-number">4.1</span> What is <em>true</em>?</h2>
