--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Florian Oswald and Jean-Marc Robin">
 
 
-<meta name="date" content="2018-08-18">
+<meta name="date" content="2018-08-23">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -198,7 +198,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="header">
 <h1 class="title">Introduction to Econometrics with R</h1>
 <h4 class="author"><em>Florian Oswald and Jean-Marc Robin</em></h4>
-<h4 class="date"><em>2018-08-18</em></h4>
+<h4 class="date"><em>2018-08-23</em></h4>
 </div>
 <div id="syllabus" class="section level1 unnumbered">
 <h1>Syllabus</h1>
@@ -285,7 +285,7 @@ gitbook.start({
 "link": "https://github.com/ScPoEcon/ScPoEconometrics/edit/master/index.Rmd",
 "text": "Edit"
 },
-"download": ["ScPoEconometrics.epub"],
+"download": ["ScPoEconometrics.pdf", "ScPoEconometrics.epub"],
 "toc": {
 "collapse": "subsection"
 }
