--- a/panel-data.html
+++ b/panel-data.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Florian Oswald and Jean-Marc Robin">
 
 
-<meta name="date" content="2018-08-18">
+<meta name="date" content="2018-08-23">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -259,7 +259,7 @@ gitbook.start({
 "link": "https://github.com/ScPoEcon/ScPoEconometrics/edit/master/09-PanelData.Rmd",
 "text": "Edit"
 },
-"download": ["ScPoEconometrics.epub"],
+"download": ["ScPoEconometrics.pdf", "ScPoEconometrics.epub"],
 "toc": {
 "collapse": "subsection"
 }
